<resources>
    <string name="app_name">TugasPertemuan5</string>
    <string name="kenali_ncovid_19">Kenali\nCOVID-19</string>
    <string name="apa_itu_kasus_covid_19">Apa itu kasus Covid-19?</string>
    <string name="person">Person</string>
    <string name="mengenal">Mengenal</string>
    <string name="mencegah">Mencegah</string>
    <string name="mengobati">Mengobati</string>
    <string name="mengantisipasi">Mengantisipasi</string>
    <string name="hotline">Hotline</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="mengenal_title">Apa Itu COVID-19</string>
    <string name="mengenal_desc">Infeksi virus Corona atau COVID-19 bisa menyebabkan penderitanya mengalami gejala flu, seperti demam, pilek, batuk, sakit tenggorokan, dan sakit kepala; atau gejala penyakit infeksi pernapasan berat, seperti demam tinggi, batuk berdahak bahkan berdarah, sesak napas, dan nyeri dada. Namun, secara umum ada 3 gejala umum yang bisa menandakan seseorang terinfeksi virus Corona, yaitu:\n\n1. Demam (suhu tubuh di atas 38 derajat Celsius)\n2. Batuk\n3. Sesak napas\n\nMenurut penelitian, gejala COVID-19 muncul dalam waktu 2 hari sampai 2 minggu setelah terpapar virus Corona. Infeksi virus Corona atau COVID-19 disebabkan oleh coronavirus, yaitu kelompok virus yang menginfeksi sistem pernapasan. Pada sebagian besar kasus, coronavirus hanya menyebabkan infeksi pernapasan ringan sampai sedang, seperti flu. Akan tetapi, virus ini juga bisa menyebabkan infeksi pernapasan berat, seperti pneumonia, Middle-East Respiratory Syndrome (MERS), dan Severe Acute Respiratory Syndrome (SARS). Ada dugaan bahwa virus Corona awalnya ditularkan dari hewan ke manusia. Namun, kemudian diketahui bahwa virus Corona juga menular dari manusia ke manusia. Seseorang dapat tertular COVID-19 melalui berbagai cara, yaitu:\n\n1. Tidak sengaja menghirup percikan ludah dari bersin atau batuk penderita COVID-19\n2. Memegang mulut atau hidung tanpa mencuci tangan terlebih dulu setelah menyentuh benda yang terkena cipratan air liur penderita CCOVID-19\n3.Kontak jarak dekat dengan penderita COVID-19, misalnya bersentuhan atau berjabat tangan Virus Corona dapat menginfeksi siapa saja, tetapi efeknya akan lebih berbahaya atau bahkan fatal bila terjadi pada orang lanjut usia, ibu hamil, orang yang sedang sakit, atau orang yang daya tahan tubuhnya lemah.</string>
    <string name="mencegah_title">Bagaimana Mencegah COVID-19</string>
    <string name="mencegah_desc">Sampai saat ini, belum ada vaksin untuk mencegah infeksi virus Corona atau COVID-19. Oleh sebab itu, cara pencegahan yang terbaik adalah dengan menghindari faktor-faktor yang bisa menyebabkan Anda terinfeksi virus ini, yaitu:\n\n1. Hindari bepergian ke tempat-tempat umum yang ramai pengunjung (social distancing).\n2. Gunakan masker saat beraktivitas di tempat umum atau keramaian.\n3. Rutin mencuci tangan dengan air dan sabun atau hand sanitizer yang mengandung alkohol minimal 60% setelah beraktivitas di luar rumah atau di tempat umum.\n4. Jangan menyentuh mata, mulut, dan hidung sebelum mencuci tangan.\n5. Hindari kontak dengan hewan, terutama hewan liar. Bila terjadi kontak dengan hewan, cuci tangan setelahnya.\n6. Masak daging sampai benar-benar matang sebelum dikonsumsi.\n7. Tutup mulut dan hidung dengan tisu saat batuk atau bersin, kemudian buang tisu ke tempat sampah.\n8. Hindari berdekatan dengan orang yang sedang sakit demam, batuk, atau pilek.\9. Jaga kebersihan benda yang sering disentuh dan kebersihan lingkungan.\n\nUntuk orang yang diduga terkena COVID-19 atau termasuk kategori ODP (orang dalam pemantauan), ada beberapa langkah yang bisa dilakukan agar virus Corona tidak menular ke orang lain, yaitu:\n\n1. Jangan keluar rumah, kecuali untuk mendapatkan pengobatan.\n2. Periksakan diri ke dokter hanya bila Anda mengalami gejala gangguan pernapasan yang disertai demam atau memenuhi kriteria PDP (pasien dalam pengawasan).\n3. Usahakan untuk tinggal terpisah dari orang lain untuk sementara waktu. Bila tidak memungkinkan, gunakan kamar tidur dan kamar mandi yang berbeda dengan yang digunakan orang lain.\n4. Larang dan cegah orang lain untuk mengunjungi atau menjenguk Anda sampai Anda benar-benar sembuh.\n5. Sebisa mungkin jangan melakukan pertemuan dengan orang yang sedang sakit.\n6. Hindari berbagi penggunaan alat makan dan minum, alat mandi, serta perlengkapan tidur dengan orang lain.\n7. Pakai masker dan sarung tangan bila sedang berada di tempat umum atau sedang bersama orang lain.\n8. Gunakan tisu untuk menutup mulut dan hidung bila batuk atau bersin, lalu segera buang tisu ke tempat sampah.</string>
    <string name="mengobati_title">Bagaimana Mengobati COVID-19</string>
    <string name="mengobati_desc">Infeksi virus Corona atau COVID-19 belum bisa diobati, tetapi ada beberapa langkah yang dapat dilakukan dokter untuk meredakan gejalanya dan mencegah penyebaran virus, yaitu:\n\n1. Merujuk penderita COVID-19 untuk menjalani perawatan dan karatina di rumah sakit yang ditunjuk\n2. Memberikan obat pereda demam dan nyeri yang aman dan sesuai kondisi penderita.\n3. Menganjurkan penderita COVID-19 untuk istirahat yang cukup.\n4. Menganjurkan penderita COVID-19 untuk banyak minum air putih untuk menjaga kadar cairan tubuh.</string>
    <string name="mengantisipasi_title">Bagaimana Mengantisipasi COVID-19</string>
    <string name="mengantisipasi_desc">Sampai saat ini, belum ada vaksin untuk mencegah infeksi virus Corona atau COVID-19. Oleh sebab itu, cara pencegahan yang terbaik adalah dengan menghindari faktor-faktor yang bisa menyebabkan Anda terinfeksi virus ini, yaitu:\n\n1. Hindari bepergian ke tempat-tempat umum yang ramai pengunjung (social distancing).\n2. Gunakan masker saat beraktivitas di tempat umum atau keramaian.\n3. Rutin mencuci tangan dengan air dan sabun atau hand sanitizer yang mengandung alkohol minimal 60% setelah beraktivitas di luar rumah atau di tempat umum.\n4. Jangan menyentuh mata, mulut, dan hidung sebelum mencuci tangan.\n5. Hindari kontak dengan hewan, terutama hewan liar. Bila terjadi kontak dengan hewan, cuci tangan setelahnya.\n6. Masak daging sampai benar-benar matang sebelum dikonsumsi.\n7. Tutup mulut dan hidung dengan tisu saat batuk atau bersin, kemudian buang tisu ke tempat sampah.\n8. Hindari berdekatan dengan orang yang sedang sakit demam, batuk, atau pilek.\9. Jaga kebersihan benda yang sering disentuh dan kebersihan lingkungan.\n\nUntuk orang yang diduga terkena COVID-19 atau termasuk kategori ODP (orang dalam pemantauan), ada beberapa langkah yang bisa dilakukan agar virus Corona tidak menular ke orang lain, yaitu:\n\n1. Jangan keluar rumah, kecuali untuk mendapatkan pengobatan.\n2. Periksakan diri ke dokter hanya bila Anda mengalami gejala gangguan pernapasan yang disertai demam atau memenuhi kriteria PDP (pasien dalam pengawasan).\n3. Usahakan untuk tinggal terpisah dari orang lain untuk sementara waktu. Bila tidak memungkinkan, gunakan kamar tidur dan kamar mandi yang berbeda dengan yang digunakan orang lain.\n4. Larang dan cegah orang lain untuk mengunjungi atau menjenguk Anda sampai Anda benar-benar sembuh.\n5. Sebisa mungkin jangan melakukan pertemuan dengan orang yang sedang sakit.\n6. Hindari berbagi penggunaan alat makan dan minum, alat mandi, serta perlengkapan tidur dengan orang lain.\n7. Pakai masker dan sarung tangan bila sedang berada di tempat umum atau sedang bersama orang lain.\n8. Gunakan tisu untuk menutup mulut dan hidung bila batuk atau bersin, lalu segera buang tisu ke tempat sampah.</string>
    <string name="chat">chat</string>

</resources>
