<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapps"
    tools:context=".MengobatiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp"
                android:text="@string/kenali_ncovid_19"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="142dp"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/person"
                android:scaleType="centerCrop"
                android:contentDescription="@string/person"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/card">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/mengobati_title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:text="@string/mengobati_desc"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>