<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bgapps">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:gravity="center_vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp"
                android:text="@string/kenali_ncovid_19"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="142dp"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/person"
                android:scaleType="centerCrop"
                android:contentDescription="@string/person"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/card"
            android:layout_marginTop="-36dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/apa_itu_kasus_covid_19"/>

            <LinearLayout
                android:id="@+id/mengenal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/corona"
                    android:layout_weight="1"
                    android:contentDescription="@string/mengenal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mengenal"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arrow"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mencegah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/washing"
                    android:layout_weight="1"
                    android:contentDescription="@string/mengenal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mencegah"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arrow"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mengobati"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/plus"
                    android:layout_weight="1"
                    android:contentDescription="@string/mengobati"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mengobati"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arrow"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/antisipasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">
                <ImageView
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_margin="16dp"
                    android:src="@drawable/mask"
                    android:layout_weight="1"
                    android:contentDescription="@string/mengantisipasi"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mengantisipasi"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/arrow"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="16dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>